2002-07-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* traceroot.cpp: Improve final search.

2002-05-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* traceroot.cpp: Better support for degeneracies.

2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* traceroot.cpp: Deflate multiple zeros.

2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* traceroot.cpp: Increase portability.

2002-03-14  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* traceroot.cpp: Improve checking for identical params.
