@@ -1,3 +1,7 @@
+2002-12-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* traceroot.cpp: Improve checking for identical params.
+
 2002-07-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* traceroot.cpp: Improve final search.
